--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,16 @@
 #choices{
   display:flex;
   justify-content:space-between;
-  
+
 }
+
+body{
+background-color:aqua
+}
+p{
+    color:red
+}
+#computer{
+    border:10px solid black;
+}
+
